fixed h2 text overlap (#188)

--- a/src/styles/vars.less
+++ b/src/styles/vars.less
@@ -45,7 +45,7 @@
 @db-card-height: 200px;
 
 @event-width: 270px;
-@event-height: 240px;
+@event-height: 280px;
 @event-extended-height: 400px;
 @event-img-height: 140px;
 
